# dvd-slackbot

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml  test_monday.py  test_tuesday.py
dvd_slackbot/: main.py
dvd_slackbot/database/: client.py
dvd_slackbot/memory/: store.py
dvd_slackbot/observability/: logger.py
dvd_slackbot/orchestration/: graph.py  state.py
dvd_slackbot/orchestration/nodes/: data_loader.py  input_guardrails.py  output_guardrails.py  pandasai_reasoner.py  parse_input.py  response_formatter.py  router.py
dvd_slackbot/semantic_layer/: compiled_semantic_layer.yaml  entities.yaml  loader.py  metrics.yaml  overview_policies.yaml  relationships.yaml  tables_enrichment.yaml  tables_inventory_product.yaml  tables_location.yaml  tables_people.yaml  tables_transactions.yaml  views.yaml
tests/: test_data_loader.py  test_guardrails.py  test_memory.py  test_semantic_layer.py
